2019-07-10  Richard Biener  <rguenther@suse.de>

PR tree-optimization/91126
	* tree-ssa-sccvn.c (n_walk_cb_data::push_partial_def): Adjust
	native encoding offset for BYTES_BIG_ENDIAN.
	(vn_reference_lookup_3): Likewise.

	* gcc.dg/torture/pr91126.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@273355 138bc75d-0d04-0410-961f-82ee72b054a4